wofi if open close instead of overlap, fix style

--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,6 +1,6 @@
 window {
     margin: 0px;
-    border: 5px solid 1e1e2e;
+    border: 5px solid #1e1e2e;
     background-color: #cdd6f4;
     border-radius: 10px;
 }
